count_terraform.tf
# terraform {
#   required_providers {
#     aws = {
#       source  = "hashicorp/aws"
#       version = "~> 4.0"
#     }
#   }
# }
# provider "aws" {
#   region = "ap-south-1"
# }
# locals {
#     project="project-01"
# }

# resource "aws_vpc" "my_vpc" {
#   cidr_block = "10.0.0.0/16"
#     tags = {
#         Name = "${local.project}-vpc"
#     }
# }
# resource "aws_subnet" "public_subnet" {
#     vpc_id = aws_vpc.my_vpc.id
#     cidr_block = "10.0.${count.index}.0/24"
#      count    = 20
#      tags = {
#         Name = "${local.project}-subnet-${count.index}"
# }
# }
